# fitness-app

./: .gitignore  LICENSE  Makefile  README.md  implementation_plan.md  prompt.md
backend/: pyproject.toml
backend/app/: db.py  main.py
backend/app/api/routers/: plans.py  references.py
backend/app/api/ws/: session.py
backend/app/models/: schemas.py
backend/app/scripts/: export_schemas.py
backend/app/services/: angles.py  filters.py  llm.py  rep_counter.py
backend/examples/: plan_demo_001.json
backend/fitness_app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json  package.json
frontend/src/: main.tsx  types.ts
frontend/src/components/: CameraView.tsx  RepCounterHUD.tsx
frontend/src/lib/: api.ts  useUserMedia.ts  ws.ts
frontend/src/lib/pose/: client.ts
frontend/src/pages/: History.tsx  Live.tsx  Onboarding.tsx  Plan.tsx
infra/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
shared/fixtures/: plan_demo_001.json  ref_pushup_v1.json
