[project]
name = "fitness-app-backend"
version = "0.1.0"
description = "FastAPI backend for browser-based fitness app"
authors = [{name="Fitness Team"}]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlmodel>=0.0.21",
  "aiosqlite>=0.20.0",
  "python-dotenv>=1.0.1",
  "orjson>=3.10.0",
  "pytest>=8.0.0"
]

[tool.uvicorn]
reload = true
host = "0.0.0.0"
port = 8000

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
